istio/virtual-service-fault-abort.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cc-server
  namespace: cc-week11
spec:
  hosts:
  - cc-server
  http:
  - fault:
      abort:
        percentage:
          value: 50
        httpStatus: 503
    route:
    - destination:
        host: cc-server
