istio/virtual-service-fault-delay.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cc-server
  namespace: cc-week11
spec:
  hosts:
  - cc-server
  http:
  - fault:
      delay:
        percentage:
          value: 100
        fixedDelay: 3s
    route:
    - destination:
        host: cc-server
