istio/virtual-service-fault-timeout.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cc-server
  namespace: cc-week11
spec:
  hosts:
  - cc-server
  http:
  - timeout: 1s
    route:
    - destination:
        host: cc-server
